--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://MariamSotova.github.io/react-app",
-  "name": "react-app-site",
+  "name": "react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
