package.json name add

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://MariamSotova.github.io/react-app",
-  "name": "react-app",
+  "homepage": "http://MariamSotova.github.io/my-site-react",
+  "name": "my-site-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
